--- a/public/phone.css
+++ b/public/phone.css
@@ -1,16 +1,19 @@
 .logo{
-    height: 39px;
+    height: 29px;
 }
-
+body{
+    height: 100vh;
+}
 .container-box{
     height: 90vh;
+    border: 2px solid orange;
 }
 textarea{
     padding: 9px 0px;
     font-size: 23px;
 }
 .send form{
-    height: 57px;
+    height: 50px;
 }
 .message{
     padding: 11px;
@@ -21,4 +24,8 @@ textarea{
 }
 .message p{
     font-size: 16px;
+}
+.rightHolder{
+    margin: 4rem 0rem;
+    margin-bottom: 2rem;
 }
